@@ -160,7 +160,7 @@
 	</target>
 
 	<target name="docbook.check">
-		<uptodate property="docbook.notRequired" targetfile="${tmp.dir}/${docbook.name}-${version}-${release}.pdf">
+		<uptodate property="docbook.notRequired" targetfile="${tmp.dir}/${docbook.name}-current.pdf">
 			<srcfiles dir="${doc.dir}" includes="${docbook.name}.xml" />
 		</uptodate>
 	</target>
@@ -173,7 +173,7 @@
 			<fileset dir="${tmp.dir}">
 				<include name="**/Images/**" />
 				<include name="*.pdf" />
-				<include name="${docbook.name}-${version}-${release}.html" />
+				<include name="${docbook.name}-current.html" />
 			</fileset>
 		</copy>
 		<copy file="${util.dir}/docbook/css/html.css" todir="${output.doc.dir}" />
@@ -217,7 +217,7 @@
 			<trycatch description="try-catch">
 				<try>
 					<java classname="org.apache.xalan.xslt.Process" classpathref="xalan-classpath" fork="true" dir="${tmp.dir}">
-						<arg line="-param html.stylesheet html.css -param ignore.image.scaling 1 -out ${docbook.name}-${version}-${release}.html -in ${docbook.name}.xml -xsl ${util.dir}/docbook/xsl/html/chunk.xsl" />
+						<arg line="-param html.stylesheet html.css -param ignore.image.scaling 1 -out ${docbook.name}-current.html -in ${docbook.name}.xml -xsl ${util.dir}/docbook/xsl/html/chunk.xsl" />
 					</java>
 				</try>
 				<catch>
@@ -235,7 +235,7 @@
 			<trycatch description="try-catch">
 				<try>
 					<java classname="org.apache.xalan.xslt.Process" classpathref="xalan-classpath" fork="true" dir="${tmp.dir}">
-						<arg line="-param html.stylesheet html.css -param ignore.image.scaling 1 -out ${docbook.name}-${version}-${release}.html -in ${docbook.name}.xml -xsl ${util.dir}/docbook/xsl/html/docbook.xsl" />
+						<arg line="-param html.stylesheet html.css -param ignore.image.scaling 1 -out ${docbook.name}-current.html -in ${docbook.name}.xml -xsl ${util.dir}/docbook/xsl/html/docbook.xsl" />
 					</java>
 				</try>
 				<catch>
@@ -271,7 +271,7 @@
 			<trycatch description="try-catch">
 				<try>
 					<exec dir="${tmp.dir}" executable="java${executable.extension}" output="log.txt">
-						<arg line="-cp ${docbook.pdf.classpath} org.apache.fop.cli.Main ${docbook.name}.fo ${docbook.name}-${version}-${release}.pdf" />
+						<arg line="-cp ${docbook.pdf.classpath} org.apache.fop.cli.Main ${docbook.name}.fo ${docbook.name}-current.pdf" />
 					</exec>
 				</try>
 				<catch>
@@ -292,7 +292,7 @@
 	</target>
 
 	<target name="generate-pdf" description="Generates a single PDF file">
-		<fop format="application/pdf" fofile="${tmp.dir}/${docbook.name}.fo" outfile="${tmp.dir}/${docbook.name}-${version}-${release}.pdf" logfiles="log.txt" />
+		<fop format="application/pdf" fofile="${tmp.dir}/${docbook.name}.fo" outfile="${tmp.dir}/${docbook.name}-current.pdf" logfiles="log.txt" />
 	</target>
 
 	<!-- ==================================================================== -->
@@ -302,7 +302,7 @@
 	<target name="buildDocJar" depends="docbook">
 		<delete file="${output.lib.dir}/${app.name}doc.jar" />
 		<jar destfile="${output.lib.dir}/${app.name}doc.jar">
-			<fileset dir="${tmp.dir}" excludes="**/*.pdf, **/twe-doc-${version}-${release}.html, **/api/**" />
+			<fileset dir="${tmp.dir}" excludes="**/*.pdf, **/${docbook.name}-current.html, **/api/**" />
 		</jar>
 	</target>
 
