@@ -1,3 +1,8 @@
+2010-10-05 Sasa Bojanic <sasaboy@together.at>
+   # now binary output contains twe-doc-current.pdf/html instead of twe-doc-x.y-z.pdf/html. The
+     references from program group also target twe-doc-current.pdf/html documents, and twe-doc-x.y-z.pdf/html
+     are contained inside twe-doc-x.y-z.zip files in the distributions package.
+   
 2010-09-29 Sasa Bojanic <sasaboy@together.at>
    # documentation - changed license to FDL version 1.3
    # webstart files updated
